--- a/sub3suite/res/documentation/index.html
+++ b/sub3suite/res/documentation/index.html
@@ -1,4 +1,7 @@
-<h1> Getting started with Sub3 Suite </h1>
+<h1> Getting started with Sub3 Suite </h1><br>
+
+<i><b> Disclaimer 1:</b> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i>
 
 <h2> Launching </h2>
 Download Sub3 Suite for your required platform (Windows, MacOS, or Linux) from <a href=https://github.com/3nock/sub3suite/releases> releases</a>.<br>
@@ -23,6 +26,7 @@ Use the links below for further help on Sub3 Suite Engines:<br>
 4. <a href=engines/active.html> Active</a> Engine.<br>
 5. <a href=engines/dns.html> DNS</a> Engine.<br>
 6. <a href=engines/ssl.html> SSL</a> Engine.<br><br>
+6. <a href=engines/url.html> URL</a> Engine.<br><br>
 Use the links below for further help on Sub3 Suite Enumerators:<br>
 1. <a href=enums/ip.html> IP</a> Enumerator.<br>
 2. <a href=enums/asn.html> ASN</a> Enumerator.<br>
@@ -31,4 +35,5 @@ Use the links below for further help on Sub3 Suite Enumerators:<br>
 5. <a href=enums/mx.html> MX</a> Enumerator.<br>
 6. <a href=enums/ssl.html> SSL</a> Enumerator.<br>
 7. <a href=enums/email.html> Email</a> Enumerator.<br>
-8. <a href=enums/url.html> URL</a> Enumerator.<br>
+
+<i> Visit <a href=https://github.com/3nock/s3s_doc/blob/main/md/index.md>online documentation</a> which is updated regularly.
