--- a/sub3suite/res/documentation/engines/raw.html
+++ b/sub3suite/res/documentation/engines/raw.html
@@ -1,4 +1,13 @@
-<h1> RAW ENGINE </h1>
+<h1> RAW ENGINE </h1><br>
+
+<i><b> Disclaimer 1:</b> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
+Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i><br><br>
+
+<i><b> Disclaimer 2:</b> Since this Tool is still in its early development stage some queries of some modules may have not been implemented or not well implement such as those with
+mulitple paremeters or different request types. <b>Do not worry</b> since it is work in progress, the modules and query options will be continuously upgraded in the comming versions.<br>
+You can <a href=https://github.com/3nock/sub3suite/blob/main/CONTACTS.md>contact us</a> if you need a particular relevant module(OSINT source) be integrated.</i><br><br>
+
+<i><b> Disclaimer 3:</b> In Case the queries of a particular module are mixed or keep on returning an error please reach out by openning an <a href=https://github.com/3nock/sub3suite/issues>issue</a> or on Telegram chat</i>
 
 <h2> What is? </h2>
 The Raw Engine queries API endpoints of different osint modules to return raw json results.<br>
@@ -17,8 +26,6 @@ They are further categorized into different sub-groups depending on the type tha
 <b>--> Emails sub-group:</b> These Osint Sources majorly deals with osint of emails.<br>
 <b>--> API sub-group:</b> These are Osint Sources that contain a variety of osint API endpoints.<br>
 <b>--> Archives sub-group:</b> These are Osint Sources containing archives of different internet entities.<br>
-<b>--> Scrape sub-group:</b> These are Osint modules that obtain data by scrapping the indicated search engine.<br>
-<b>--> Site sub-group:</b> These are Osint modules that obtain data from different website containing osint info.<br>
 
 <h2> Features </h2>
 1. Supports different Input types depending on the endpoint query request<br>
@@ -26,11 +33,23 @@ They are further categorized into different sub-groups depending on the type tha
 3. Use filters to extract specific entities from the returned json results<br>
 2. Supports querying for multiple targets.<br>
 
-<h2> Usage & Examples </h2><br>
+<h2> Scan Configuration values: </h2><br>
+<b> Timeout - </b> Time for performing the lookup in milliseconds (terminates connection if timeout). It is advised for the timeout to be greater than 1000<br>
+<b> No Duplicates - </b> Check to avoid duplicated results of the target<br>
+<b> AutoSave To Project - </b> Sends the obtained results directly to the project explorer as the scan progresses<br>
 
-<h2> References </h2>
-1. <a href=https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6>https://blog.appsecco.com/a-penetration-testers-guide-to-sub-domain-enumeration-7d842d5570f6</a>
+<h2> Actions: </h2>
 
-<h2> NOTE: </h2><br>
-<i> This is a very simple documentation on the Tool. It still doesn't contain many information on the many features of the tool & on how to effectively use the tool.<br>
-Help improve the <a href=https://github.com/3nock/s3s_doc> documentation </a>.</i>
+Details on the actions for the obtained results.<br>
+
+ - The Actions on Results are accessible via the <b>Actions ></b> button and <b>Right-Click</b> on the Results. & are only active when the results are present<br>
+
+1. <b> Clear: </b> Clears the results and the progress bar.<br>
+2. <b> Expand & Collapse: </b> Expands the all areas of the result tree and Collapse all areas of the result tree respectively<br>
+3. <b> Save: </b> Saves the obtained Results To a File. Saves in Json format<br>
+4. <b> Copy: </b> Copies the results on the clipboard. Copies in Json format<br>
+5. <b> Send To Project: </b> Sends the Obtained results to the project explorer.<br>
+6. <b> Send Item: </b> Sends The choosen Item Type to appropriate ENGINE/ENUMERATOR.
+
+<b> NOTE: </b><br>
+	If you have filtered the results using the filter. the above actions will only be performed on the remaing results after filter<br>
