fixing welcome view

--- a/OTE/res/files/welcome.html
+++ b/OTE/res/files/welcome.html
@@ -1,9 +1,7 @@
-<h1>OSINT Template Engine</h1>
-<h2>Information Gathering Simplified</h2>
+<h1>Welcome to OSINT Template Engine</h1>
 Version 1.0.0
 <br>
-<br>
-© Copyright Spider Suite 2022
+© Copyright 2023
 <br>
 <br>
 <a href="https://github.com/3nock/SpiderSuite">SpiderSuite</a> is an information gathering and target mapping tool
