--- a/OTE/res/files/about.html
+++ b/OTE/res/files/about.html
@@ -2,17 +2,17 @@
 Version 1.0.0
 <br>
 <br>
-© Copyright Spider Suite 2022
+© Copyright OSINT Template Engine 2023
 <br>
 <br>
-<a href="https://github.com/3nock/OTE">OSINT Template Engine</a> is an information gathering tool.
+<a href="https://github.com/3nock/OTE">OSINT Template Engine</a> is a research-grade information gathering tool.
 <br>
 <br>
-Visit <a href=https://spidersuite.github.io>Spider Suite</a> for more information and Follow <a href="https://twitter.com/intent/follow?screen_name=spider_suite&tw_p=followbutton">@spider_suite</a> for more updates on the project progress.
+Visit <a href=https://spidersuite.github.io/OTE>OSINT Template Engine</a> for more information and Follow <a href="https://twitter.com/intent/follow?screen_name=spider_suite&tw_p=followbutton">@spider_suite</a> for more updates on the project progress.
 <br>
 <br>
 This product includes software developed by the following open source projects:<br>
   • SQLite database library: <a href="https://sqlite.org">https://sqlite.org</a><br>
 <br>
 <br>
-Want to help? <a href="https://spidersuite.github.io/sponsor/">Make a donation</a> or <a href="https://github.com/3nock/SpiderSuite/blob/main/CONTRIBUTING.md">get involved!</a><br>
+Want to help? <a href="https://spidersuite.github.io/sponsor/">Make a donation</a> or <a href="https://github.com/3nock/OTE/blob/main/CONTRIBUTING.md">get involved!</a><br>
