--- a/OTE/res/files/about.html
+++ b/OTE/res/files/about.html
@@ -8,7 +8,7 @@ Version 1.0.0
 <a href="https://github.com/3nock/OTE">OSINT Template Engine</a> is a research-grade information gathering tool.
 <br>
 <br>
-Visit <a href=https://spidersuite.github.io/OTE>OSINT Template Engine</a> for more information and Follow <a href="https://twitter.com/intent/follow?screen_name=spider_suite&tw_p=followbutton">@spider_suite</a> for more updates on the project progress.
+Visit <a href=https://spidersuite.github.io/OTE>OSINT Template Engine</a> for more information and Follow <a href="https://twitter.com/intent/follow?screen_name=spider_suite&tw_p=followbutton">@spider_suite</a> for updates on the project's progress.
 <br>
 <br>
 This product includes software developed by the following open source projects:<br>
